--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -6,7 +6,7 @@
   metric_buffer_limit = 10000
 
 [[outputs.influxdb_v2]]
-  urls = ["http://influxdb:8086"]
+  urls = ["https://influx.vicezion.com"]
   token = "$INFLUX_TOKEN"
   organization = "human-centric"
   bucket = "telemetry"
