--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+      - /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
 
   influxdb:
     image: influxdb:2.7
@@ -35,7 +35,7 @@ services:
     environment:
       INFLUX_TOKEN: supersecret-supertoken
     volumes:
-      - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
     links:
       - influxdb
 
@@ -53,13 +53,14 @@ services:
       AI_API_URL: https://ai.vicezion.com
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/grafana/provisioning:/etc/grafana/provisioning:ro
+      - /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/grafana/dashboards:/var/lib/grafana/dashboards:ro
     depends_on:
       - influxdb
 
   ai_service:
-    build: ./ai_service
+    build:
+      context: /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/ai_service
     container_name: ai-service
     restart: unless-stopped
     ports:
@@ -74,7 +75,8 @@ services:
       - mlflow
 
   telemetry_feeder:
-    build: ./telemetry_feeder
+    build:
+      context: /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/telemetry_feeder
     container_name: telemetry-feeder
     restart: unless-stopped
     environment:
@@ -102,7 +104,8 @@ services:
       - mlflow-data:/mlflow
 
   chatops:
-    build: ./chatops_service
+    build:
+      context: /root/Human-Centric-AI-Framework-for-Secure-and-Efficient-Data-Center-Operations/chatops_service
     container_name: chatops
     restart: unless-stopped
     ports:
