--- a/.github/workflows/build-chatops.yml
+++ b/.github/workflows/build-chatops.yml
@@ -7,7 +7,10 @@ on:
     paths:
       - "chatops_service/**"
 
+permissions:
+  packages: write
 jobs:
+    
   build:
     runs-on: ubuntu-latest
     steps:
