--- a/.github/workflows/build-feeder.yml
+++ b/.github/workflows/build-feeder.yml
@@ -7,7 +7,10 @@ on:
     paths:
       - "telemetry_feeder/**"
 
+permissions:
+  packages: write
 jobs:
+    
   build:
     runs-on: ubuntu-latest
     steps:
