Tag and push versioned Docker images in workflows
GitHub Actions workflows now tag Docker images with a date and short SHA, and push both 'latest' and versioned tags to GHCR. Also, added Watchtower labels to services in docker-compose.yml for automated updates.

--- a/.github/workflows/build-ai.yml
+++ b/.github/workflows/build-ai.yml
@@ -21,5 +21,11 @@ jobs:
 
       - name: Build and push
         run: |
-          docker build -t ghcr.io/visezion/hcai-ai:latest ./ai_service
-          docker push ghcr.io/visezion/hcai-ai:latest
+            VERSION=$(date +%Y%m%d)-${GITHUB_SHA::7}
+            IMAGE=ghcr.io/visezion/hcai-ai
+
+            docker build -t $IMAGE:latest ./ai_service
+            docker tag $IMAGE:latest $IMAGE:$VERSION
+
+            docker push $IMAGE:latest
+            docker push $IMAGE:$VERSION
