--- a/.github/workflows/build-chatops.yml
+++ b/.github/workflows/build-chatops.yml
@@ -10,7 +10,7 @@ on:
 permissions:
   packages: write
 jobs:
-    
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -21,5 +21,12 @@ jobs:
 
       - name: Build and push
         run: |
-          docker build -t ghcr.io/visezion/hcai-chatops:latest ./chatops_service
-          docker push ghcr.io/visezion/hcai-chatops:latest
+            VERSION=$(date +%Y%m%d)-${GITHUB_SHA::7}
+            IMAGE=ghcr.io/visezion/hcai-chatops
+
+            docker build -t $IMAGE:latest ./chatops_service
+            docker tag $IMAGE:latest $IMAGE:$VERSION
+
+            docker push $IMAGE:latest
+            docker push $IMAGE:$VERSION
+
