--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,5 +1,6 @@
 listener 1883
-allow_anonymous true
+allow_anonymous false
+password_file /mosquitto/config/passwordfile
 persistence true
 persistence_location /mosquitto/data/
 log_type error
