--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,5 +1,5 @@
 listener 1883
-allow_anonymous false
+allow_anonymous true
 password_file /mosquitto/config/passwordfile
 persistence true
 persistence_location /mosquitto/data/
